--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,7 @@ header
     height: 230px;
     margin: .5em .25em;
 
-    border-radius: 4px;
+    border-radius: 2px;
     background-color: white;
     -webkit-box-shadow: 0 1px 7px 0 rgba(0, 0, 0, .15);
        -moz-box-shadow: 0 1px 7px 0 rgba(0, 0, 0, .15);
@@ -141,12 +141,14 @@ header
 }
 .inner_info h3
 {
-    font-size: .7em;
+    font-size: .8em;
     font-weight: 200;
 
     overflow: hidden;
 
     white-space: nowrap;
+
+    color: #7f8c8d;
 
     -webkit-margin-before: 0;
     -webkit-margin-after: 0;
@@ -160,6 +162,8 @@ header
 
     white-space: nowrap;
 
+    color: #2c3e50;
+
     -webkit-margin-before: 0;
     -webkit-margin-after: 0;
 }
@@ -168,11 +172,11 @@ header
 {
     position: relative;
     z-index: 1;
-    top: -45px;
+    top: -50px;
     left: 126px;
 
     width: 1em;
-    height: 2.2em;
+    height: 2.5em;
 
     background: -webkit-linear-gradient(left, rgba(255, 255, 255, 0), white);
     background:    -moz-linear-gradient(left, rgba(255, 255, 255, 0), white);
@@ -187,8 +191,8 @@ header
     height: 150px;
     margin-right: .5em;
 
-    border-top-left-radius: 4px;
-    border-top-right-radius: 4px;
+    border-top-left-radius: 2px;
+    border-top-right-radius: 2px;
 }
 
 .artwork_img
@@ -196,15 +200,15 @@ header
     width: 150px;
     height: 150px;
 
-    border-top-left-radius: 4px;
-    border-top-right-radius: 4px;
+    border-top-left-radius: 2px;
+    border-top-right-radius: 2px;
 }
 
 .size_buttons_container
 {
     position: relative;
     z-index: 1;
-    top: -34px;
+    top: -40px;
     left: .5em;
 }
 
